--- a/RemoteApp/Viewer/Viewer.csproj
+++ b/RemoteApp/Viewer/Viewer.csproj
@@ -54,6 +54,7 @@
       <DependentUpon>Playback.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
