--- a/HololensApp/Assembly-CSharp.csproj
+++ b/HololensApp/Assembly-CSharp.csproj
@@ -60,19 +60,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\AddOns\MixedRemoteViewCompositor\Scripts\Interop\CaptureEngine.cs" />
-    <Compile Include="Assets\AddOns\MixedRemoteViewCompositor\Scripts\Interop\Connection.cs" />
-    <Compile Include="Assets\AddOns\MixedRemoteViewCompositor\Scripts\Interop\Connector.cs" />
-    <Compile Include="Assets\AddOns\MixedRemoteViewCompositor\Scripts\Interop\Listener.cs" />
-    <Compile Include="Assets\AddOns\MixedRemoteViewCompositor\Scripts\Interop\NetworkComponent.cs" />
-    <Compile Include="Assets\AddOns\MixedRemoteViewCompositor\Scripts\Interop\PlaybackEngine.cs" />
-    <Compile Include="Assets\AddOns\MixedRemoteViewCompositor\Scripts\Interop\Plugin.cs" />
-    <Compile Include="Assets\AddOns\MixedRemoteViewCompositor\Scripts\MrvcCapture.cs" />
-    <Compile Include="Assets\AddOns\MixedRemoteViewCompositor\Scripts\MrvcManager.cs" />
-    <Compile Include="Assets\AddOns\MixedRemoteViewCompositor\Scripts\MrvcPlayer.cs" />
-    <Compile Include="Assets\AddOns\MixedRemoteViewCompositor\Scripts\SpatialTranformHelper.cs" />
-    <Compile Include="Assets\AddOns\MixedRemoteViewCompositor\Scripts\StateChangedEventArgs.cs" />
-    <Compile Include="Assets\AddOns\MixedRemoteViewCompositor\Scripts\VideoCompositor.cs" />
     <Compile Include="Assets\HoloToolkit\Boundary\Scripts\BoundaryManager.cs" />
     <Compile Include="Assets\HoloToolkit\Boundary\Scripts\Edge.cs" />
     <Compile Include="Assets\HoloToolkit\Boundary\Scripts\EdgeHelpers.cs" />
@@ -840,11 +827,10 @@
     <Compile Include="Assets\HoloToolkit-Preview\SpectatorView\UnityARKitPlugin\Plugins\iOS\UnityARKit\NativeInterface\ARTrackingStateReason.cs" />
     <Compile Include="Assets\HoloToolkit-Preview\SpectatorView\UnityARKitPlugin\Plugins\iOS\UnityARKit\NativeInterface\ARUserAnchor.cs" />
     <Compile Include="Assets\HoloToolkit-Preview\SpectatorView\UnityARKitPlugin\Plugins\iOS\UnityARKit\NativeInterface\UnityARSessionNativeInterface.cs" />
-    <Compile Include="Assets\Scripts\AnnotationsManager.cs" />
+    <Compile Include="Assets\RemoteAssistanceARScripts\AnnotationsManager.cs" />
+    <Compile Include="Assets\RemoteAssistanceARScripts\UDPListener.cs" />
     <Compile Include="Assets\Scripts\CursorManager.cs" />
     <Compile Include="Assets\Scripts\RaycastController.cs" />
-    <Compile Include="Assets\Scripts\Receiver.cs" />
-    <Compile Include="Assets\Scripts\UDPListener.cs" />
     <None Include="Assets\HoloToolkit\Utilities\Scripts\GLTF\Shaders\GLTFConstant.cginc" />
     <None Include="Assets\HoloToolkit\Common\Shaders\Obsolete\UnlitConfigurable.shader" />
     <None Include="Assets\HoloToolkit\UX\Shaders\HUXButtonShader.shader" />
@@ -896,7 +882,6 @@
     <None Include="Assets\HoloToolkit\UX\Shaders\Alpha-Diffuse.shader" />
     <None Include="Assets\HoloToolkit-Preview\SpectatorView\UnityARKitPlugin\Plugins\iOS\UnityARKit\Shaders\YUVShader.shader" />
     <None Include="Assets\HoloToolkit\Common\Shaders\Standard.shader" />
-    <None Include="Assets\AddOns\MixedRemoteViewCompositor\Materials\Compositor.shader" />
     <None Include="Assets\HoloToolkit\Common\Shaders\Obsolete\VertexLitConfigurableTransparent.shader" />
     <None Include="Assets\HoloToolkit\UX\Shaders\HUXButtonHighlightShader.shader" />
     <None Include="Assets\HoloToolkit\Common\Shaders\Obsolete\BlinnPhongConfigurable.cginc" />
